--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,35 @@
-<h1>Welcome</h1>
+<section class="user-data">
+  <dl class="dl-horizontal">
+    <dt>Name:</dt>
+    <dd></dd>
+  </dl>
+
+  <dl class="dl-horizontal">
+    <dt>Distance:</dt>
+    <dd></dd>
+  </dl>
+
+  <dl class="dl-horizontal">
+    <dt>Status:</dt>
+    <dd></dd>
+  </dl>
+</section>
+
+<section class="user-data">
+  <dl class="dl-horizontal">
+    <dt>Name:</dt>
+    <dd></dd>
+  </dl>
+
+  <dl class="dl-horizontal">
+    <dt>Distance:</dt>
+    <dd></dd>
+  </dl>
+
+  <dl class="dl-horizontal">
+    <dt>Status:</dt>
+    <dd></dd>
+  </dl>
+</section>
 
 <%= @api %>
