--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -32,6 +32,46 @@
   </dl>
 </section>
 
+<section class="zombie-data">
+  <dl class="dl-horizontal">
+    <dt></dt>
+    <dd></dd>
+  </dl>
+
+  <dl class="dl-horizontal">
+    <dt>Distance:</dt>
+    <dd></dd>
+  </dl>
+
+  <dl class="dl-horizontal">
+    <dt>Status:</dt>
+    <dd></dd>
+  </dl>
+</section>
+
+<section class="user-data">
+  <dl class="dl-horizontal">
+    <dt>Name:</dt>
+    <dd></dd>
+  </dl>
+
+  <dl class="dl-horizontal">
+    <dt>Distance:</dt>
+    <dd></dd>
+  </dl>
+
+  <dl class="dl-horizontal">
+    <dt>Status:</dt>
+    <dd></dd>
+  </dl>
+</section>
+
+
 <%= @api %>
-a
+<hr>
 <%= @api_zombie %>
+<hr>
+<hr>
+<%= @user_data %>
+<hr>
+<%= @zombie_data %>
