--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,10 @@
 
         <div class="inner cover">
           <h1 class="cover-heading">Welcome to the Zombiebit Apocalypse</h1>
+
+
+          <a href="https://twitter.com/share" class="twitter-share-button" data-via="MrJadaml">Tweet</a>
+
           <%= yield %>
         </div>
 
