--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,12 +8,12 @@
 
   <dl class="dl-horizontal">
     <dt>Distance:</dt>
-    <dd><%= @api["summary"]["distances"]["activity"][1]["distance"] %></dd>
+    <dd><%= @api["summary"]["distances"][0]["distance"] %></dd>
   </dl>
 
   <dl class="dl-horizontal">
     <dt>Status:</dt>
-    <dd></dd>
+    <dd>Human</dd>
   </dl>
 </section>
 
@@ -26,61 +26,15 @@
 
   <dl class="dl-horizontal">
     <dt>Distance:</dt>
-    <dd><%= @api_zombie["summary"]["distances"]["activity"][1]["distance"] %></dd>
+    <dd><%= @api_zombie["summary"]["distances"][0]["distance"] %></dd>
   </dl>
 
   <dl class="dl-horizontal">
     <dt>Status:</dt>
-    <dd></dd>
+    <dd>Zombie</dd>
   </dl>
 </section>
 
-<<<<<<< HEAD
 <button name="zombie?">
   Did you outrun the zombie?
 </button>
-=======
-<section class="zombie-data">
-  <dl class="dl-horizontal">
-    <dt></dt>
-    <dd></dd>
-  </dl>
-
-  <dl class="dl-horizontal">
-    <dt>Distance:</dt>
-    <dd></dd>
-  </dl>
-
-  <dl class="dl-horizontal">
-    <dt>Status:</dt>
-    <dd></dd>
-  </dl>
-</section>
-
-<section class="user-data">
-  <dl class="dl-horizontal">
-    <dt>Name:</dt>
-    <dd></dd>
-  </dl>
-
-  <dl class="dl-horizontal">
-    <dt>Distance:</dt>
-    <dd></dd>
-  </dl>
-
-  <dl class="dl-horizontal">
-    <dt>Status:</dt>
-    <dd></dd>
-  </dl>
-</section>
-
->>>>>>> 6bc5152934ab72102e3578beeff3e97e733750c2
-
-<%= @api %>
-<hr>
-<%= @api_zombie %>
-<hr>
-<hr>
-<%= @user_data %>
-<hr>
-<%= @zombie_data %>
