--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,40 +1,43 @@
-<h2>Can you out run the zombie?</h2>
+<div class="content">
+  <h2>Can you out run the zombie?</h2>
 
-<section class="user-data">
-  <dl class="dl-horizontal">
-    <dt>Name:</dt>
-    <dd><%= @user_data["displayName"] %></dd>
-  </dl>
+  <section class="user-data">
+    <dl class="dl-horizontal">
+      <dt>Name:</dt>
+      <dd><%= @user_data["displayName"] %></dd>
+    </dl>
 
-  <dl class="dl-horizontal">
-    <dt>Distance:</dt>
-    <dd><%= @api["summary"]["distances"][0]["distance"] %></dd>
-  </dl>
+    <dl class="dl-horizontal">
+      <dt>Distance:</dt>
+      <dd><%= @api["summary"]["distances"][0]["distance"] %></dd>
+    </dl>
 
-  <dl class="dl-horizontal">
-    <dt>Status:</dt>
-    <dd>Human</dd>
-  </dl>
-</section>
+    <dl class="dl-horizontal">
+      <dt>Status:</dt>
+      <dd>Human</dd>
+    </dl>
+  </section>
 
-<section class="user-data">
-  <dl class="dl-horizontal">
-    <dt>Name:</dt>
-    <dd><%= @zombie_data["displayName"] %>
-    </dd>
-  </dl>
+  <section class="user-data">
+    <dl class="dl-horizontal">
+      <dt>Name:</dt>
+      <dd><%= @zombie_data["displayName"] %>
+      </dd>
+    </dl>
 
-  <dl class="dl-horizontal">
-    <dt>Distance:</dt>
-    <dd><%= @api_zombie["summary"]["distances"][0]["distance"] %></dd>
-  </dl>
+    <dl class="dl-horizontal">
+      <dt>Distance:</dt>
+      <dd><%= @api_zombie["summary"]["distances"][0]["distance"] %></dd>
+    </dl>
 
-  <dl class="dl-horizontal">
-    <dt>Status:</dt>
-    <dd>Zombie</dd>
-  </dl>
-</section>
+    <dl class="dl-horizontal">
+      <dt>Status:</dt>
+      <dd>Zombie</dd>
+    </dl>
+  </section>
 
-<button name="zombie?">
-  Did you outrun the zombie?
-</button>
+  <button name="zombie?">
+    Did you outrun the zombie?
+  </button>
+  
+</div>
