updated styling and added pics

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+*, *:before, *:after {
+  box-sizing: border-box;
+}
 /*
 * Globals
 */
@@ -166,6 +169,11 @@ body {
   }
 }
 
-.content {
+.container {
+  width: 100%;
+}
 
+.image>img {
+  height: 100%;
+  width: 80%;
 }
